[tool.poetry]
name = "graph algorithms"
version = "0.2.0"
description = "graph algorithms implementation"
authors = ["Denis <Dysprosium92@ya.ru>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "algorithms" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
